k8s/whisparr/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr-service
  namespace: whisparr
spec:
  selector:
    app: whisparr
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
