k8s/whisparr/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-ingressroute
  namespace: whisparr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whisparr.localhost`)
      kind: Rule
      services:
        - name: whisparr-service
          port: 6969
